# atom_aiot

./: .gitmodules  README.md
IoT/functional_chips/AD5940/: Design tasks.pptx  readme.md
IoT/functional_chips/AD5940/ad5940_BIA/: MUX_TABLE.ino  Variables_BIA.h  Variables_MUX.h
IoT/functional_chips/AD5940/ad5940_BIA/BIA_MX_V2.5.1_streamArr/: BIA_LIB.ino  BIA_MX_V2.5.1_streamArr.ino  BodyImpedance.c  MUX_LIB_V0.2.ino
IoT/peripherals/display/oled/ssd1306/: main.c  ssd1306_spi_interface.c  ssd1306_spi_interface.h
IoT/peripherals/oled/ssd1306/: Readme.md  main.c  oled_font_picture.h  oled_ssd1306.c  oled_ssd1306.h  ssd1306_spi_interface.c  ssd1306_spi_interface.h
iot_developboards/MCU_boards/esp32c6_mpu6050/hardware/: README.md
iot_developboards/MCU_boards/esp32c6_mpu6050/hardware/PCB/: bom.csv
iot_developboards/MCU_boards/mini_ad5940/hardware/: README.md
iot_developboards/Power_boards/chargemanagement_ldo/hardaware/: README.md
iot_developboards/Power_boards/powermanagement_ldo/hardaware/PCB/: bom.xls  main.PcbDoc
iot_developboards/esp32c3_icm42605/hardware/: README.md
iot_developboards/esp32c6_mpu6050/hardware/: bom.csv
iot_developboards/esp32c6_mpu6050/hardware/ad24_files/: Constraints.xml  Needle_main.SchDoc
iot_items/functional_chips/AD5940/: README.md
iot_items/peripherals/IMU/: README.md
iot_items/peripherals/IMU/ICM45686/: README.md
iot_items/peripherals/IMU/ICM45686/examples/esp32/imu/: CMakeLists.txt  inv_imu_driver_aux1.c  inv_imu_self_reset.c  inv_imu_self_reset.h
iot_items/peripherals/IMU/MPU6050/: README.md
(+107 files in other folders)
